[gd_scene load_steps=3 format=3 uid="uid://dtmrnkvmyv2ix"]

[ext_resource type="Texture2D" uid="uid://b4id8kxnrmmm8" path="res://Image/Menu/Inscription.png" id="1_lxxoh"]
[ext_resource type="Script" path="res://Script/Menu/RegisterScreen.gd" id="2_vo7kf"]

[node name="RegisterScreen" type="Sprite2D"]
texture = ExtResource("1_lxxoh")
centered = false
script = ExtResource("2_vo7kf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UsernameText" type="LineEdit" parent="Control"]
layout_mode = 2
offset_left = 693.0
offset_top = 582.0
offset_right = 1266.0
offset_bottom = 632.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter a username"

[node name="EmailText" type="LineEdit" parent="Control"]
layout_mode = 2
offset_left = 693.0
offset_top = 717.0
offset_right = 1266.0
offset_bottom = 767.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Enter a email"

[node name="PasswordText" type="LineEdit" parent="Control"]
layout_mode = 2
offset_left = 693.0
offset_top = 846.0
offset_right = 957.0
offset_bottom = 894.0
theme_override_font_sizes/font_size = 28
placeholder_text = "Enter a password"
secret = true

[node name="ConfirmPassword" type="LineEdit" parent="Control"]
layout_mode = 2
offset_left = 1003.0
offset_top = 846.0
offset_right = 1267.0
offset_bottom = 894.0
theme_override_font_sizes/font_size = 28
placeholder_text = "Confirm password"
secret = true

[node name="ConnectionScreenButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 662.0
offset_top = 937.0
offset_right = 958.0
offset_bottom = 995.0
mouse_default_cursor_shape = 2

[node name="RegisterButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 996.0
offset_top = 937.0
offset_right = 1294.0
offset_bottom = 995.0
mouse_default_cursor_shape = 2

[node name="ErrorTextRegister" type="RichTextLabel" parent="."]
offset_left = 692.0
offset_top = 903.0
offset_right = 1273.0
offset_bottom = 932.0
theme_override_font_sizes/normal_font_size = 20

[connection signal="button_down" from="ConnectionScreenButton" to="." method="_on_connection_screen_button_button_down"]
[connection signal="button_down" from="RegisterButton" to="." method="_on_register_button_button_down"]
